# s1engine

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.unified  EDITOR_ROADMAP.md  GEMINI.md  ISSUES.md  Makefile  README.md  SECURITY.md  complex.docx  docker-compose.gpu.yml  docker-compose.yml  fidelity.md  package-lock.json  remark.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
ai/: Dockerfile  docker-compose.yml  entrypoint.sh  system-prompts.json
crates/s1-convert/: Cargo.toml
crates/s1-convert/src/: chpx.rs  convert.rs  csv_parser.rs  doc_reader.rs  error.rs  lib.rs  piece_table.rs
crates/s1-crdt/: Cargo.toml
crates/s1-crdt/src/: attr_crdt.rs  awareness.rs  clock.rs  collab.rs  compression.rs  crdt_op.rs  error.rs  lib.rs  metadata_crdt.rs  op_id.rs  resolver.rs  serialize.rs  state_vector.rs  text_crdt.rs  tombstone.rs  tree_crdt.rs
crates/s1-crdt/tests/: convergence.rs  proptests.rs  scenarios.rs
crates/s1-format-docx/: Cargo.toml
crates/s1-format-docx/src/: content_parser.rs  content_writer.rs  error.rs  header_footer_writer.rs  lib.rs  numbering_parser.rs  numbering_writer.rs  property_parser.rs  reader.rs  section_parser.rs  section_writer.rs  signature_parser.rs  streaming.rs  style_parser.rs  style_writer.rs  writer.rs
crates/s1-format-docx/tests/: attribute_roundtrip.rs
crates/s1-format-docy/: Cargo.toml
crates/s1-format-md/: Cargo.toml
crates/s1-format-md/src/: lib.rs  reader.rs  writer.rs
crates/s1-format-odt/: Cargo.toml
crates/s1-format-odt/src/: content_parser.rs  content_writer.rs  error.rs  lib.rs  manifest_writer.rs  property_parser.rs  property_writer.rs  reader.rs  settings_parser.rs  settings_writer.rs  style_parser.rs  style_writer.rs  writer.rs
crates/s1-format-odt/tests/: attribute_roundtrip.rs
crates/s1-format-pdf/: Cargo.toml
crates/s1-format-pdf/src/: editor.rs  error.rs  lib.rs  writer.rs
crates/s1-format-txt/: Cargo.toml
crates/s1-format-txt/src/: error.rs  reader.rs  writer.rs
crates/s1-format-xlsx/: Cargo.toml
crates/s1-layout/: Cargo.toml
crates/s1-layout/src/: engine.rs  error.rs  html.rs  layout_helpers.rs  lib.rs  style_resolver.rs  types.rs
crates/s1-layout/tests/: test_chinese_fidelity.rs
crates/s1-model/: Cargo.toml
crates/s1-model/src/: attributes.rs  id.rs  lib.rs  media.rs  metadata.rs  node.rs  numbering.rs  section.rs  styles.rs  tree.rs
crates/s1-ops/: Cargo.toml
crates/s1-ops/src/: cursor.rs  history.rs  operation.rs  transaction.rs
crates/s1-ops/tests/: serde_roundtrip.rs
crates/s1-text/: Cargo.toml
crates/s1-text/src/: bidi.rs  error.rs  font.rs  font_db.rs  lib.rs  linebreak.rs  shaping.rs  types.rs
crates/s1engine/: Cargo.toml
crates/s1engine/benches/: engine_bench.rs
crates/s1engine/examples/: convert.rs  create_report.rs
crates/s1engine/src/: builder.rs  document.rs  engine.rs  error.rs  format.rs  lib.rs
crates/s1engine/tests/: create_fixtures.rs  doc_examples.rs  fidelity.rs  fidelity_validation.rs  hostile_inputs.rs  invariants.rs  real_world.rs  test_complex_header.rs  testdocs_analysis.rs  wasm_bridge.rs
crates/s1engine/tests/fixtures/: formatted.docx  text-only.docx
demo/: index.html
docs/: AI_FEATURES_USER_GUIDE.md  API_DESIGN.md  ARCHITECTURE.md  CANVAS_EDITOR_ELEMENTS_SPEC.md  CANVAS_EDITOR_FIDELITY_PHASE_CHECKLIST.md  CANVAS_EDITOR_FRONTEND_MODULE_PLAN.md  CANVAS_EDITOR_LOW_LEVEL_DESIGN.md  CANVAS_EDITOR_WASM_API_CONTRACT.md  COLLABORATION_PROTOCOL.md  DEPENDENCIES.md  DOCY_VALIDATION_PLAN.md  INTEGRATION_MILESTONES.md  INTEGRATION_TEST_MATRIX.md  M2_PLAN.md  MULTI_PAGE_RENDERING.md  OVERVIEW.md  PHASE0_TRACKER.md  PHASE1_TRACKER.md  PHASE2_TRACKER.md  PHASE3_TRACKER.md  PHASE4_TRACKER.md  PHASE5_TRACKER.md  PHASE6_TRACKER.md  PHASE7_TRACKER.md  PHASE8_TRACKER.md  PHASE9_TRACKER.md  PRODUCT_ROADMAP.md  ROADMAP.md  SPECIFICATION.md  SPECIFICATIONS_INDEX.md  UNIFIED_SERVER_PLAN.md  WASM_DESIGN.md  WEB_CODE_GRAPH.md
docs-site/: book.toml
docs-site/book/: 404.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
docs-site/src/: SUMMARY.md  introduction.md
docs-site/theme/: custom.css  custom.js
docs/fidelity/: CONVERSION_MATRIX.md  DOCUMENT_MODEL_REVIEW.md  OVERVIEW.md  (+6 more)
editor/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
ffi/c/: Cargo.toml
ffi/c/src/: lib.rs
ffi/wasm/: Cargo.toml
ffi/wasm/examples/: generate_fidelity_corpus.rs  validate_real_docs.rs
ffi/wasm/src/: lib.rs
future/: ARCHITECTURE.md  AUTH_AND_SECURITY.md  COLLABORATION.md  COMPETITIVE_ANALYSIS.md  DISTRIBUTION.md  EDITOR_SDK.md  PHASES.md  PLUGIN_SYSTEM.md  README.md  REST_API.md  VISION.md  WEBSOCKET_API.md  WHITE_LABELING.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_doc_reader.rs  fuzz_docx_reader.rs  fuzz_engine_open.rs  fuzz_format_roundtrip.rs  fuzz_odt_reader.rs  fuzz_txt_reader.rs
scripts/: build-wasm-npm.sh  build-wasm.sh  build-web-dist.js  compare-canvas-fidelity.py  docy_browser_smoke.js  download-fonts.sh  generate-jwt.js  relay.js  serve.py  setup-github-repo.sh  test.sh
server/: Cargo.toml  Dockerfile
server/src/: admin.rs  auth.rs  collab.rs  config.rs  file_sessions.rs  integration.rs  main.rs  plugins.rs  routes.rs  storage.rs  webhooks.rs
tests/: e2e_browser_sim.mjs  e2e_capture_pptx.mjs  e2e_capture_pptx2.mjs  e2e_capture_real_pptx.mjs  e2e_chat_final.mjs  e2e_count_drawings.mjs  e2e_drawing_debug.mjs  e2e_extract2.mjs  e2e_extract3.mjs  e2e_extract_final.mjs  e2e_extract_pptx.mjs  e2e_final2.mjs  e2e_final_img.mjs  e2e_full_scroll.mjs  e2e_img_check.mjs  e2e_img_debug.mjs  e2e_img_draw_state.mjs  e2e_img_loaded.mjs  e2e_img_position.mjs  e2e_img_render.mjs  e2e_img_trace.mjs  e2e_img_trace2.mjs  e2e_img_url.mjs  e2e_imgloader.mjs  e2e_quick_check.mjs  e2e_screenshot_top.mjs  e2e_scroll.mjs
web/: adapter.js  collab.js  index.html  menubar.js  styles.css  toolbar.js
(+200 files in other folders)
