[workspace]
resolver = "2"
exclude = [
    "editor/test-docs/create_test_doc",
]
members = [
    "crates/s1-model",
    "crates/s1-ops",
    "crates/s1-format-docx",
    "crates/s1-format-odt",
    "crates/s1-format-pdf",
    "crates/s1-format-txt",
    "crates/s1-convert",
    "crates/s1-layout",
    "crates/s1-text",
    "crates/s1-crdt",
    "crates/s1-format-md",
    "crates/s1-format-xlsx",
    "crates/s1engine",
    "ffi/wasm",
    "ffi/c",
    "server",
]

[workspace.package]
version = "1.0.1"
edition = "2021"
rust-version = "1.88"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Rudra-Office/Rudra-Editor"
homepage = "https://github.com/Rudra-Office/Rudra-Editor"
keywords = ["document", "docx", "odt", "collaborative-editing", "wasm"]
categories = ["parsing", "text-processing", "web-programming"]

[workspace.dependencies]
# Internal crates (path for local dev, version for crates.io publish)
s1-model = { version = "1.0.1", path = "crates/s1-model" }
s1-ops = { version = "1.0.1", path = "crates/s1-ops" }
s1-format-docx = { version = "1.0.1", path = "crates/s1-format-docx" }
s1-format-odt = { version = "1.0.1", path = "crates/s1-format-odt" }
s1-format-pdf = { version = "1.0.1", path = "crates/s1-format-pdf" }
s1-format-txt = { version = "1.0.1", path = "crates/s1-format-txt" }
s1-format-md = { version = "1.0.1", path = "crates/s1-format-md" }
s1-convert = { version = "1.0.1", path = "crates/s1-convert" }
s1-layout = { version = "1.0.1", path = "crates/s1-layout" }
s1-text = { version = "1.0.1", path = "crates/s1-text" }
s1-crdt = { version = "1.0.1", path = "crates/s1-crdt" }
s1-format-xlsx = { version = "1.0.1", path = "crates/s1-format-xlsx" }
s1engine = { version = "1.0.1", path = "crates/s1engine" }

# External dependencies
thiserror = "2"
quick-xml = "0.37"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
encoding_rs = "0.8"
pulldown-cmark = "0.12"

# Crypto (for digital signature validation)
ring = "0.17"
x509-cert = { version = "0.2", default-features = false, features = ["std"] }

# Dev dependencies
proptest = "1"
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }
