[package]
name = "s1-server"
description = "HTTP API server for s1engine — document management, conversion, collaboration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "s1-server"
path = "src/main.rs"

[dependencies]
# Internal
s1engine = { workspace = true }
s1-convert = { workspace = true }

# Web framework
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# WebSocket
axum-extra = { version = "0.10", features = ["typed-header"] }
futures-util = "0.3"

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
toml = "0.8"

# HTTP client (for webhook delivery)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Auth (JWT + HMAC)
hmac = "0.12"
sha2 = "0.10"
base64 = { workspace = true }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
bytes = "1"
