[package]
name = "s1-convert"
description = "Format conversion pipelines for s1engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
s1-model = { workspace = true }
s1-format-docx = { workspace = true }
s1-format-odt = { workspace = true }
thiserror = { workspace = true }
cfb = "0.10"

[dev-dependencies]
pretty_assertions = { workspace = true }
