[package]
name = "s1-format-docx"
description = "DOCX (OOXML) reader/writer for s1engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
crypto = ["ring", "x509-cert"]

[dependencies]
s1-model = { workspace = true }
quick-xml = { workspace = true }
zip = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
ring = { workspace = true, optional = true }
x509-cert = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
ring = { workspace = true }
x509-cert = { workspace = true }
