[package]
name = "s1-format-md"
description = "Markdown reader/writer for s1engine document model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
s1-model = { workspace = true }
pulldown-cmark = "0.12"
thiserror = { workspace = true }
