[package]
name = "s1-format-odt"
description = "ODT (ODF) reader/writer for s1engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
s1-model = { workspace = true }
quick-xml = { workspace = true }
zip = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
