[package]
name = "s1-format-pdf"
description = "PDF export for s1engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
s1-model = { workspace = true }
s1-layout = { workspace = true }
s1-text = { workspace = true }
thiserror = { workspace = true }
pdf-writer = "0.14"
subsetter = "0.2"
miniz_oxide = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
fontdb = "0.23"
