[package]
name = "s1-layout"
description = "Page layout engine for s1engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
s1-model = { workspace = true }
s1-text = { workspace = true }
thiserror = { workspace = true }
fontdb = "0.23"

[dev-dependencies]
pretty_assertions = { workspace = true }
