[package]
name = "s1-model"
description = "Core document model for s1engine — tree, nodes, attributes, styles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Zero external dependencies — this is intentional and must never change.

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
