[package]
name = "s1-model"
description = "Core document model for s1engine — tree, nodes, attributes, styles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Optional serde support. Zero-dep by default; enable with `features = ["serde"]`.
serde = ["dep:serde"]

[dependencies]
# Zero external dependencies by default — this is intentional.
# serde is optional and only pulled in when the "serde" feature is enabled.
serde = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
