[package]
name = "s1-ops"
description = "Operations, transactions, undo/redo for s1engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
serde = ["dep:serde", "s1-model/serde"]

[dependencies]
s1-model = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = "1"
