[package]
name = "s1engine-c"
description = "C FFI bindings for s1engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
s1engine = { workspace = true }
