[package]
name = "s1engine-wasm"
description = "WebAssembly bindings for s1engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
s1engine = { workspace = true, features = ["layout", "pdf", "crdt", "convert"] }
s1-model = { workspace = true }
s1-layout = { workspace = true }
s1-text = { workspace = true }
s1-format-pdf = { workspace = true, features = ["pdf-editing"] }
s1-crdt = { workspace = true }
s1-ops = { workspace = true }
s1-format-xlsx = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
